tests222/tests2/test247.out
lli: <stdin>:1:1: error: expected top-level entity
line 6: variable i is not defined
^
